Fix warnings and add null check